fluxui/include/fluxui/fluxui_c.h

typedef struct FluxUIApp FluxUIApp;
typedef struct FluxUIWidget FluxUIWidget;
typedef struct FluxUIColor {
    float r;
    float g;
    float b;
    float a;
} FluxUIColor;
typedef struct FluxUIRect {
    float x;
    float y;
    float w;
    float h;
} FluxUIRect;
typedef enum FluxUIRenderBackend {
    FLUXUI_BACKEND_AUTO = 0,
    FLUXUI_BACKEND_VULKAN = 1,
    FLUXUI_BACKEND_DIRECT3D12 = 2,
    FLUXUI_BACKEND_DIRECT12 = FLUXUI_BACKEND_DIRECT3D12,
    FLUXUI_BACKEND_DIRECTX12 = FLUXUI_BACKEND_DIRECT3D12,
    FLUXUI_BACKEND_METAL = 3,
    FLUXUI_BACKEND_SKIA = 4,
    FLUXUI_BACKEND_COMPATIBILITY = 100
} FluxUIRenderBackend;
typedef void (*FluxUIUpdateCallback)(FluxUIApp* app, float delta_time, void* user_data);
typedef void (*FluxUIClickCallback)(FluxUIWidget* widget, void* user_data);
typedef void (*FluxUIRouteCallback)(FluxUIApp* app,
                                    FluxUIWidget* container,
                                    const char* route,
                                    void* user_data);
typedef void (*FluxUIDrawCallback)(FluxUIWidget* widget, void* renderer_ptr, FluxUIRect bounds, void* user_data);
typedef void (*FluxUIVirtualListItemCallback)(FluxUIWidget* item,
                                              uint32_t index,
                                              void* user_data);
// Application lifecycle
FLUXUI_API FluxUIApp* fluxui_app_create(void);
FLUXUI_API void fluxui_app_destroy(FluxUIApp* app);
FLUXUI_API int fluxui_app_set_backend(FluxUIApp* app, FluxUIRenderBackend backend);
FLUXUI_API FluxUIRenderBackend fluxui_app_get_backend(FluxUIApp* app);
FLUXUI_API int fluxui_app_init(FluxUIApp* app, const char* title, int width, int height);
FLUXUI_API void fluxui_app_shutdown(FluxUIApp* app);
FLUXUI_API void fluxui_app_run(FluxUIApp* app);
FLUXUI_API void fluxui_app_stop(FluxUIApp* app);
// Application resources and callbacks
FLUXUI_API int fluxui_app_load_stylesheet(FluxUIApp* app, const char* path);
FLUXUI_API void fluxui_app_add_stylesheet(FluxUIApp* app, const char* css);
FLUXUI_API int fluxui_app_load_font(FluxUIApp* app, const char* path, float size);
FLUXUI_API int fluxui_app_load_font_named(FluxUIApp* app, const char* path, float size, const char* name);
FLUXUI_API int fluxui_app_load_default_font(FluxUIApp* app, float size);
FLUXUI_API void fluxui_app_warm_font_cache(FluxUIApp* app, const float* sizes, uint32_t count, const char* name);
FLUXUI_API void fluxui_app_release_font_sources(FluxUIApp* app);
FLUXUI_API void fluxui_app_set_update_callback(FluxUIApp* app,
                                               FluxUIUpdateCallback callback,
                                               void* user_data);
FLUXUI_API FluxUIWidget* fluxui_app_root(FluxUIApp* app);
FLUXUI_API void fluxui_app_emit_custom_event(FluxUIApp* app,
                                             const char* name,
                                             const char* text);
FLUXUI_API void fluxui_app_add_route(FluxUIApp* app,
                                     const char* path,
                                     FluxUIRouteCallback callback,
                                     void* user_data);
FLUXUI_API int fluxui_app_navigate(FluxUIApp* app, const char* path);
FLUXUI_API const char* fluxui_app_current_route(FluxUIApp* app);
FLUXUI_API int fluxui_app_route_dirty(FluxUIApp* app);
FLUXUI_API int fluxui_app_render_route(FluxUIApp* app, FluxUIWidget* container);
// Tree mutation
FLUXUI_API void fluxui_widget_clear_children(FluxUIWidget* widget);
FLUXUI_API void fluxui_widget_reserve_children(FluxUIWidget* widget, uint32_t count);
FLUXUI_API FluxUIWidget* fluxui_widget_add_element(FluxUIWidget* parent,
                                                   const char* tag_name,
                                                   const char* text,
                                                   const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_panel(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_form(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_fieldset(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_text(FluxUIWidget* parent,
                                                const char* text,
                                                const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_label(FluxUIWidget* parent,
                                                 const char* text,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_legend(FluxUIWidget* parent,
                                                  const char* text,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_button(FluxUIWidget* parent,
                                                  const char* label,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_text_input(FluxUIWidget* parent,
                                                      const char* placeholder,
                                                      const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_input(FluxUIWidget* parent,
                                                 const char* input_type,
                                                 const char* placeholder,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_password_input(FluxUIWidget* parent,
                                                          const char* placeholder,
                                                          const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_textarea(FluxUIWidget* parent,
                                                    const char* placeholder,
                                                    const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_checkbox(FluxUIWidget* parent,
                                                    int checked,
                                                    const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_radio(FluxUIWidget* parent,
                                                 int checked,
                                                 const char* group,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_range(FluxUIWidget* parent,
                                                 float value,
                                                 float min,
                                                 float max,
                                                 float step,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_select(FluxUIWidget* parent,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_option(FluxUIWidget* parent,
                                                  const char* label,
                                                  const char* value,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_anchor(FluxUIWidget* parent,
                                                  const char* text,
                                                  const char* href,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_details(FluxUIWidget* parent,
                                                   const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_summary(FluxUIWidget* parent,
                                                   const char* text,
                                                   const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_dialog(FluxUIWidget* parent,
                                                  const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_meter(FluxUIWidget* parent,
                                                 float value,
                                                 float min,
                                                 float max,
                                                 const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_progress_element(FluxUIWidget* parent,
                                                           float value,
                                                           float max,
                                                           const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_hr(FluxUIWidget* parent,
                                              const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_br(FluxUIWidget* parent,
                                              const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_icon(FluxUIWidget* parent,
                                                const char* glyph,
                                                const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_progress_bar(FluxUIWidget* parent,
                                                        const char* class_name,
                                                        float progress);
FLUXUI_API FluxUIWidget* fluxui_widget_add_stat_card(FluxUIWidget* parent,
                                                     const char* title,
                                                     const char* value,
                                                     const char* subtitle,
                                                     FluxUIColor accent);
FLUXUI_API FluxUIWidget* fluxui_widget_add_canvas(FluxUIWidget* parent, const char* class_name);
FLUXUI_API FluxUIWidget* fluxui_widget_add_virtual_list(FluxUIWidget* parent,
                                                        const char* class_name,
                                                        uint32_t item_count,
                                                        float item_height,
                                                        FluxUIVirtualListItemCallback callback,
                                                        void* user_data);
FLUXUI_API void fluxui_virtual_list_set_item_count(FluxUIWidget* widget, uint32_t item_count);
FLUXUI_API void fluxui_virtual_list_refresh(FluxUIWidget* widget);
FLUXUI_API void fluxui_virtual_list_scroll_to_index(FluxUIWidget* widget,
                                                    uint32_t index,
                                                    int strategy);
FLUXUI_API void fluxui_canvas_set_on_draw(FluxUIWidget* canvas, FluxUIDrawCallback callback, void* user_data);
// Canvas 2D Drawing Primitives (usable inside draw callback)
FLUXUI_API void fluxui_draw_rect(void* renderer_ptr, FluxUIRect rect, FluxUIColor color);
FLUXUI_API void fluxui_draw_text(void* renderer_ptr, const char* text, float x, float y, FluxUIColor color, float font_size);
FLUXUI_API void fluxui_draw_image(void* renderer_ptr, const char* name_or_path, FluxUIRect rect, float opacity);
FLUXUI_API void fluxui_renderer_flush(void* renderer_ptr);
// Widget state
FLUXUI_API void fluxui_widget_set_id(FluxUIWidget* widget, const char* id);
FLUXUI_API void fluxui_widget_set_class(FluxUIWidget* widget, const char* class_name);
FLUXUI_API void fluxui_widget_set_visible(FluxUIWidget* widget, int visible);
FLUXUI_API FluxUIRect fluxui_widget_get_bounds(FluxUIWidget* widget);
FLUXUI_API void fluxui_widget_set_on_click(FluxUIWidget* widget,
                                           FluxUIClickCallback callback,
                                           void* user_data);
// Text-like widgets
FLUXUI_API void fluxui_text_set_content(FluxUIWidget* widget, const char* text);
FLUXUI_API void fluxui_button_set_label(FluxUIWidget* widget, const char* label);
FLUXUI_API void fluxui_text_input_set_value(FluxUIWidget* widget, const char* value);
FLUXUI_API const char* fluxui_text_input_get_value(FluxUIWidget* widget);