fluxui/include/fluxui/widgets.h

class Widget;
enum class EventPhase {
    None = 0,
    Capture = 1,
    AtTarget = 2,
    Bubble = 3
};
class Text;
class Canvas;
enum class TextInputType {
    Text,
    Password,
    Search,
    Email,
    Url,
    Tel,
    Number,
    Hidden,
    Button,
    Submit,
    Reset,
    File,
    Color,
    Date,
    Time,
    Month,
    Week,
    DateTimeLocal,
    Image
};
enum class ImageWidgetState {
    Idle,
    Loading,
    Complete,
    Error
};
inline Text* Widget::p(const std::string& content, const std::string& cls) {
    auto* widget = text(content, cls);
    widget->type = "p";
    return widget;
}
inline Text* Widget::b(const std::string& content, const std::string& cls) {
    auto* widget = text(content, cls);
    widget->type = "b";
    return widget;
}
inline Anchor* Widget::a(const std::string& content, const std::string& href, const std::string& cls) {
    return anchor(content, href, cls);
}