bindings/python/fluxui.py

import ctypes
import os
import sys

# Find and load the shared library
lib_name = "fluxui_shared"
if sys.platform == "win32":
    lib_file = f"{lib_name}.dll"
elif sys.platform == "darwin":
    lib_file = f"lib{lib_name}.dylib"
else:
    lib_file = f"lib{lib_name}.so"

# Search in the build/Release directory relative to the workspace, or in current directories.
possible_paths = [
    os.path.join(os.path.dirname(__file__), "../../build/Release", lib_file),
    os.path.join(os.getcwd(), "build/Release", lib_file),
    os.path.join(os.getcwd(), lib_file),
    lib_file
]

_lib = None
for p in possible_paths:
    if os.path.exists(p):
        try:
            _lib = ctypes.CDLL(p)
            break
        except Exception:
            pass

if _lib is None:
    try:
        _lib = ctypes.CDLL(lib_file)
    except Exception as e:
        raise ImportError(f"Could not load FluxUI shared library. Searched in: {possible_paths}. Error: {e}")

class FluxUIColor(ctypes.Structure):
    _fields_ = [
        ("r", ctypes.c_float),
        ("g", ctypes.c_float),
        ("b", ctypes.c_float),
        ("a", ctypes.c_float)
    ]

class FluxUIRect(ctypes.Structure):
    _fields_ = [
        ("x", ctypes.c_float),
        ("y", ctypes.c_float),
        ("w", ctypes.c_float),
        ("h", ctypes.c_float)
    ]

# Callback types
FluxUIClickCallback = ctypes.CFUNCTYPE(None, ctypes.c_void_p, ctypes.c_void_p)
FluxUIUpdateCallback = ctypes.CFUNCTYPE(None, ctypes.c_void_p, ctypes.c_float, ctypes.c_void_p)
FluxUIRouteCallback = ctypes.CFUNCTYPE(None, ctypes.c_void_p, ctypes.c_void_p, ctypes.c_char_p, ctypes.c_void_p)
FluxUIDrawCallback = ctypes.CFUNCTYPE(None, ctypes.c_void_p, ctypes.c_void_p, FluxUIRect, ctypes.c_void_p)
FluxUIVirtualListItemCallback = ctypes.CFUNCTYPE(None, ctypes.c_void_p, ctypes.c_uint32, ctypes.c_void_p)

# Define ctypes prototypes
# Application lifecycle
_lib.fluxui_app_create.restype = ctypes.c_void_p
_lib.fluxui_app_create.argtypes = []

_lib.fluxui_app_destroy.restype = None
_lib.fluxui_app_destroy.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_set_backend.restype = ctypes.c_int
_lib.fluxui_app_set_backend.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.fluxui_app_get_backend.restype = ctypes.c_int
_lib.fluxui_app_get_backend.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_init.restype = ctypes.c_int
_lib.fluxui_app_init.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_int, ctypes.c_int]

_lib.fluxui_app_shutdown.restype = None
_lib.fluxui_app_shutdown.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_run.restype = None
_lib.fluxui_app_run.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_stop.restype = None
_lib.fluxui_app_stop.argtypes = [ctypes.c_void_p]

# Application resources & callbacks
_lib.fluxui_app_load_stylesheet.restype = ctypes.c_int
_lib.fluxui_app_load_stylesheet.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_app_add_stylesheet.restype = None
_lib.fluxui_app_add_stylesheet.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_app_load_font.restype = ctypes.c_int
_lib.fluxui_app_load_font.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_float]

_lib.fluxui_app_load_font_named.restype = ctypes.c_int
_lib.fluxui_app_load_font_named.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_float, ctypes.c_char_p]

_lib.fluxui_app_load_default_font.restype = ctypes.c_int
_lib.fluxui_app_load_default_font.argtypes = [ctypes.c_void_p, ctypes.c_float]

_lib.fluxui_app_warm_font_cache.restype = None
_lib.fluxui_app_warm_font_cache.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_float), ctypes.c_uint32, ctypes.c_char_p]

_lib.fluxui_app_release_font_sources.restype = None
_lib.fluxui_app_release_font_sources.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_set_update_callback.restype = None
_lib.fluxui_app_set_update_callback.argtypes = [ctypes.c_void_p, FluxUIUpdateCallback, ctypes.c_void_p]

_lib.fluxui_app_root.restype = ctypes.c_void_p
_lib.fluxui_app_root.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_emit_custom_event.restype = None
_lib.fluxui_app_emit_custom_event.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_app_add_route.restype = None
_lib.fluxui_app_add_route.argtypes = [ctypes.c_void_p, ctypes.c_char_p, FluxUIRouteCallback, ctypes.c_void_p]

_lib.fluxui_app_navigate.restype = ctypes.c_int
_lib.fluxui_app_navigate.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_app_current_route.restype = ctypes.c_char_p
_lib.fluxui_app_current_route.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_route_dirty.restype = ctypes.c_int
_lib.fluxui_app_route_dirty.argtypes = [ctypes.c_void_p]

_lib.fluxui_app_render_route.restype = ctypes.c_int
_lib.fluxui_app_render_route.argtypes = [ctypes.c_void_p, ctypes.c_void_p]

# Tree mutation
_lib.fluxui_widget_clear_children.restype = None
_lib.fluxui_widget_clear_children.argtypes = [ctypes.c_void_p]

_lib.fluxui_widget_reserve_children.restype = None
_lib.fluxui_widget_reserve_children.argtypes = [ctypes.c_void_p, ctypes.c_uint32]

_lib.fluxui_widget_add_element.restype = ctypes.c_void_p
_lib.fluxui_widget_add_element.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_panel.restype = ctypes.c_void_p
_lib.fluxui_widget_add_panel.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_form.restype = ctypes.c_void_p
_lib.fluxui_widget_add_form.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_fieldset.restype = ctypes.c_void_p
_lib.fluxui_widget_add_fieldset.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_text.restype = ctypes.c_void_p
_lib.fluxui_widget_add_text.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_label.restype = ctypes.c_void_p
_lib.fluxui_widget_add_label.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_legend.restype = ctypes.c_void_p
_lib.fluxui_widget_add_legend.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_button.restype = ctypes.c_void_p
_lib.fluxui_widget_add_button.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_text_input.restype = ctypes.c_void_p
_lib.fluxui_widget_add_text_input.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_input.restype = ctypes.c_void_p
_lib.fluxui_widget_add_input.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_password_input.restype = ctypes.c_void_p
_lib.fluxui_widget_add_password_input.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_textarea.restype = ctypes.c_void_p
_lib.fluxui_widget_add_textarea.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_checkbox.restype = ctypes.c_void_p
_lib.fluxui_widget_add_checkbox.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_char_p]

_lib.fluxui_widget_add_radio.restype = ctypes.c_void_p
_lib.fluxui_widget_add_radio.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_range.restype = ctypes.c_void_p
_lib.fluxui_widget_add_range.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_char_p]

_lib.fluxui_widget_add_select.restype = ctypes.c_void_p
_lib.fluxui_widget_add_select.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_option.restype = ctypes.c_void_p
_lib.fluxui_widget_add_option.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_anchor.restype = ctypes.c_void_p
_lib.fluxui_widget_add_anchor.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_details.restype = ctypes.c_void_p
_lib.fluxui_widget_add_details.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_summary.restype = ctypes.c_void_p
_lib.fluxui_widget_add_summary.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_dialog.restype = ctypes.c_void_p
_lib.fluxui_widget_add_dialog.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_meter.restype = ctypes.c_void_p
_lib.fluxui_widget_add_meter.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_char_p]

_lib.fluxui_widget_add_progress_element.restype = ctypes.c_void_p
_lib.fluxui_widget_add_progress_element.argtypes = [ctypes.c_void_p, ctypes.c_float, ctypes.c_float, ctypes.c_char_p]

_lib.fluxui_widget_add_hr.restype = ctypes.c_void_p
_lib.fluxui_widget_add_hr.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_br.restype = ctypes.c_void_p
_lib.fluxui_widget_add_br.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_icon.restype = ctypes.c_void_p
_lib.fluxui_widget_add_icon.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p]

_lib.fluxui_widget_add_progress_bar.restype = ctypes.c_void_p
_lib.fluxui_widget_add_progress_bar.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_float]

_lib.fluxui_widget_add_stat_card.restype = ctypes.c_void_p
_lib.fluxui_widget_add_stat_card.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p, FluxUIColor]

_lib.fluxui_widget_add_canvas.restype = ctypes.c_void_p
_lib.fluxui_widget_add_canvas.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_add_virtual_list.restype = ctypes.c_void_p
_lib.fluxui_widget_add_virtual_list.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_uint32, ctypes.c_float, FluxUIVirtualListItemCallback, ctypes.c_void_p]

_lib.fluxui_virtual_list_set_item_count.restype = None
_lib.fluxui_virtual_list_set_item_count.argtypes = [ctypes.c_void_p, ctypes.c_uint32]

_lib.fluxui_virtual_list_refresh.restype = None
_lib.fluxui_virtual_list_refresh.argtypes = [ctypes.c_void_p]

_lib.fluxui_virtual_list_scroll_to_index.restype = None
_lib.fluxui_virtual_list_scroll_to_index.argtypes = [ctypes.c_void_p, ctypes.c_uint32, ctypes.c_int]

_lib.fluxui_canvas_set_on_draw.restype = None
_lib.fluxui_canvas_set_on_draw.argtypes = [ctypes.c_void_p, FluxUIDrawCallback, ctypes.c_void_p]

# Canvas 2D Drawing Primitives
_lib.fluxui_draw_rect.restype = None
_lib.fluxui_draw_rect.argtypes = [ctypes.c_void_p, FluxUIRect, FluxUIColor]

_lib.fluxui_draw_text.restype = None
_lib.fluxui_draw_text.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_float, ctypes.c_float, FluxUIColor, ctypes.c_float]

_lib.fluxui_draw_image.restype = None
_lib.fluxui_draw_image.argtypes = [ctypes.c_void_p, ctypes.c_char_p, FluxUIRect, ctypes.c_float]

_lib.fluxui_renderer_flush.restype = None
_lib.fluxui_renderer_flush.argtypes = [ctypes.c_void_p]

# Widget state
_lib.fluxui_widget_set_id.restype = None
_lib.fluxui_widget_set_id.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_set_class.restype = None
_lib.fluxui_widget_set_class.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_widget_set_visible.restype = None
_lib.fluxui_widget_set_visible.argtypes = [ctypes.c_void_p, ctypes.c_int]

_lib.fluxui_widget_get_bounds.restype = FluxUIRect
_lib.fluxui_widget_get_bounds.argtypes = [ctypes.c_void_p]

_lib.fluxui_widget_set_on_click.restype = None
_lib.fluxui_widget_set_on_click.argtypes = [ctypes.c_void_p, FluxUIClickCallback, ctypes.c_void_p]

# Text-like widgets state
_lib.fluxui_text_set_content.restype = None
_lib.fluxui_text_set_content.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_button_set_label.restype = None
_lib.fluxui_button_set_label.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_text_input_set_value.restype = None
_lib.fluxui_text_input_set_value.argtypes = [ctypes.c_void_p, ctypes.c_char_p]

_lib.fluxui_text_input_get_value.restype = ctypes.c_char_p
_lib.fluxui_text_input_get_value.argtypes = [ctypes.c_void_p]
